# VPES-Homework

./: CMakeLists.txt
HW2/: CMakeLists.txt  exor.h  exor_main.cpp  mon.h  nand_main.cpp  stim.h  xor_main.cpp
HW3/: CMakeLists.txt  main.cpp  place.h  state_machine.cpp  stimuli.cpp
HW3_4/: CMakeLists.txt  main.cpp  subnet.h  transition.h
HW4/: CMakeLists.txt
HW5/: CMakeLists.txt  kpn.cpp  kpn.h  main.cpp
HW6/: CMakeLists.txt  bus.h  main.cpp  memory.h  processor.cpp  processor.h
HW8/: CMakeLists.txt  initiator.h  main.cpp  memory_manager.cpp  memory_manager.h  target.h  util.h
